--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Welcome to my website</h1>
+<p>Hiring for good frontend developer</p>
 
 </body>
 </html> 
