--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<html>
+
 <object data="file:///C:/Users/omkar.sonawane/Downloads/Omkar%20Sonawane%20Resume%20-AWS%20Data%20Engineer.pdf"/>
 
 </html>
