--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
-<object data="file:///C:/Users/omkar.sonawane/Downloads/Omkar%20Sonawane%20Resume%20-AWS%20Data%20Engineer.pdf"/>
-
+  <head>
+    <title>PDF Example by Object Tag</title>
+  </head>
+  <body>
+    <h1>PDF Example by Object Tag</h1>
+    <object data="C:/Users/omkar.sonawane/Downloads/Omkar Sonawane Resume -AWS Data Engineer.pdf" type="application/pdf" width="100%" height="500px">
+      <p>Unable to display PDF file. <a href="C:/Users/omkar.sonawane/Downloads/Omkar Sonawane Resume -AWS Data Engineer.pdf">Download</a> instead.</p>
+    </object>
+  </body>
 </html>
