--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <title>PDF Example by Object Tag</title>
   </head>
   <body>
-    <h1>PDF Example by Object Tag</h1>
-    <object data="C:/Users/omkar.sonawane/Downloads/Omkar Sonawane Resume -AWS Data Engineer.pdf" type="application/pdf" width="100%" height="500px">
-      <p>Unable to display PDF file. <a href="C:/Users/omkar.sonawane/Downloads/Omkar Sonawane Resume -AWS Data Engineer.pdf">Download</a> instead.</p>
-    </object>
+    <embed src="file_name.pdf" width="800px" height="2100px" />
   </body>
 </html>
