--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>PDF Example by Object Tag</title>
   </head>
   <body>
-    <embed src="C:\Users\omkar.sonawane\Downloads\Omkar Sonawane Resume -AWS Data Engineer.pdf" width="800px" height="2100px" />
+    <embed src="C:/Users/omkar.sonawane/Downloads/Omkar Sonawane Resume -AWS Data Engineer.pdf" width="800px" height="2100px" />
   </body>
 </html>
